--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,6 @@
   <base href="/">
 </head>
 <body layout="column">
-  <toolbar></toolbar>
+  <toolbar class="toolbar" ng-controller="toolbarCtrl"></toolbar>
   <md-content ui-view="" flex=""></md-content>
 </body>
