--- a/app/client/index.html
+++ b/app/client/index.html
@@ -1,6 +1,1 @@
-<head>
-  <title>Sistema Meio Norte - Interatividade</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-</head>
-<body>
-</body>
+<head>  <title>Sistema Meio Norte - Interatividade</title>  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"></head><body></body>
