Rede Meio Norte 60%, todo fluxo de cadastro Ok, falta programacao e algumas interações

--- a/admin/client/main.html
+++ b/admin/client/main.html
@@ -1,4 +1,6 @@
 <head>
-  <title>Rede Meio Norte - Interatividade</title>
+  <title>Sistema Meio Norte - Admin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <link rel="shortcut icon" href="/iconfav.ico" sizes="32x32" type="image/x-icon" />
+
 </head>
