--- a/app/client/index.html
+++ b/app/client/index.html
@@ -1,1 +1,1 @@
-<head>  <title>Sistema Meio Norte - Interatividade</title>  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">  <link rel="shortcut icon" href="/iconfav.ico" sizes="32x32" type="image/x-icon" /></head><body></body>
+<head>  <title>Sistema Meio Norte - Interatividade</title>  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">  <link rel="shortcut icon" href="/iconfav.ico" sizes="32x32" type="image/x-icon" /></head><body></body>
