Estilo portal meionorte.com

--- a/app/client/layout.html
+++ b/app/client/layout.html
@@ -6,8 +6,9 @@
 
   </div>
 
-  {{> navigationTabs }}
-  {{> addMessage }}
+  {{> navTabsNewspaper }}
+  {{> navTabsPortal }}
+  {{> addMessageTelevision }}
   {{> addMessageFMMN }}
   {{> addMessageBOAFM }}
 
